# stem-separator

./: .dockerignore  .gitignore  CHANGELOG.md  DOCKER.md  Dockerfile  FEATURE_SUGGESTIONS.md  LICENSE  README.md  build_and_upload.sh  docker-compose.yml  install.bat  install.sh  pyproject.toml  requirements.txt  stem_separator.py
.claude/: settings.local.json
stem_separator/: __init__.py  __main__.py  batch.py  cli.py  config.py  logging_config.py  metadata.py  mixing.py  preview.py  processing.py  spotify.py  utils.py  youtube.py
tests/: __init__.py  test_config.py  test_mixing.py  test_utils.py
web/: __init__.py  __main__.py  server.py
web/static/: index.html
